2010-11-02  James Simonsen  <simonjam@chromium.org>

Reviewed by Adam Barth.

        mathml in html sometimes incorrectly parsed
        https://bugs.webkit.org/show_bug.cgi?id=48105

        * html5lib/resources/webkit01.dat: Test case for bug.
2010-11-02  James Simonsen  <simonjam@chromium.org>

        Reviewed by Adam Barth.

        mathml in html sometimes incorrectly parsed
        https://bugs.webkit.org/show_bug.cgi?id=48105

        * html/parser/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processEndTag): Fixed to match HTML5 spec.

Canonical link: https://commits.webkit.org/61702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71209 268f45cc-cd09-0410-ab3c-d52691b4dbfc